Visually finished the table

--- a/src/app/components/articles/config-tables/config-tables.component.html
+++ b/src/app/components/articles/config-tables/config-tables.component.html
@@ -43,8 +43,8 @@
 
                 <div class="scroll-sideways">
                     <!-- Table -->
-                    <table class="table table-dark" *ngIf="table.entries.length > 0">
-                        <!-- Talbe heading -->
+                    <table class="table table-dark table-striped" *ngIf="table.entries.length > 0">
+                        <!-- Table heading -->
                         <thead>
                             <tr>
                             <th scope="col">#</th>
