--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 //Fonts
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
+input[type="submit"], button {
+    font-family: Source Sans Pro,sans-serif !important;
+}
 
 //Fontawesome 5 icons
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
