--- a/src/app/components/utility/textfield/textfield.component.scss
+++ b/src/app/components/utility/textfield/textfield.component.scss
@@ -1,11 +1,11 @@
-.fa-pencil:hover{
+i.fa-pencil:hover{
     color: gray;
 }
 
-.fa-check:hover{
+i.fa-check:hover{
     color: #368949;
 }
 
-.fa-times:hover{
+i.fa-times:hover{
     color: #9c1e2a;
 }
