--- a/src/app/components/utility/formly-formcontainer/formly-formcontainer.component.html
+++ b/src/app/components/utility/formly-formcontainer/formly-formcontainer.component.html
@@ -1,12 +1,12 @@
 <!-- Form -->
-<form [formGroup]="form" enctype="{{enctype}}">
+<form [formGroup]="form" enctype="{{enctype}}" (submit)="onSubmit()">
     <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
     <div class="btn btn-dark mr-3" (click)="onCancel()">
         Cancel
     </div>
-    <div 
-    class="btn btn-dark" 
-    [ngClass]="{'d-none': form.valid, 'strikethrough': !form.valid}"
+    <div
+    *ngIf="!form.valid"
+    class="btn btn-dark strikethrough" 
     placement="top" 
     ngbTooltip="The form is not yet correctly filled out!"
     >
@@ -14,7 +14,7 @@
         Submit *
     </div>
 
-    <div class="btn btn-primary" (click)="onSubmit()" [ngClass]="{'d-none': !form.valid}">
+    <button type="submit" class="btn btn-primary" *ngIf="form.valid">
         Submit
-    </div>
+    </button>
 </form>
