--- a/src/app/components/articles/spells/spells.component.scss
+++ b/src/app/components/articles/spells/spells.component.scss
@@ -64,3 +64,8 @@ table{
 .expand:hover{
     height: 8rem;
 }
+
+.badge-secondary:hover{
+    background-color: var(--#{dark});
+    color: var(--link-blue);
+}
