--- a/src/app/components/articles/quest-overview/quest-overview.component.html
+++ b/src/app/components/articles/quest-overview/quest-overview.component.html
@@ -8,7 +8,7 @@
         <div *ngFor="let questTaker of quests">
             <div class="mb-3 mx-0 row">
                 <!-- Outer Table Heading -->
-                <h4 class="col-lg-6 px-0 my-auto">
+                <h4 class="col-md-6 px-0 my-auto">
                     {{questTaker.key}}'s Quests
                     <i *ngIf="userHasCreatePermission()" class="fa fa-plus icon ml-2" routerLink="create"></i>
                 </h4>
@@ -18,7 +18,7 @@
                 <!-- Filterselect -->
                 <select 
                 name="quest-status" 
-                class="col-lg-3" 
+                class="col-md-3" 
                 [(ngModel)]="filterStates[questTaker.key]"
                 >
                     <option selected value="Default">Default</option>
