--- a/src/app/components/articles/character-article-update/character-article-update.component.html
+++ b/src/app/components/articles/character-article-update/character-article-update.component.html
@@ -13,16 +13,18 @@
         </div>
 
         <!-- Connections -->
-        <h4 class="mb-0"> Classes </h4>
-        <hr class="white-separator">
-
-        <div id="player-classes" class="mb-5" *ngIf="model">
-            <span class="badge badge-secondary mr-3" *ngFor="let connection of model.player_class_connections">
-                {{ connection.player_class_details.name }}
-                <span class="ml-2 fa fa-trash icon" (click)="deletePlayerClassConnection(connection)"></span>
-            </span>
-
-            <span class="mx-3 fa fa-plus icon fa-1-5x" (click)="toggleConnectionCreateState()" *ngIf="!isCharacterConnectionCreationState; else connectionForm"></span>
+        <div *ngIf="formState===constants.updateState">
+            <h4 class="mb-0"> Classes </h4>
+            <hr class="white-separator">
+    
+            <div id="player-classes" class="mb-5" *ngIf="model">
+                <span class="badge badge-secondary mr-3" *ngFor="let connection of model.player_class_connections">
+                    {{ connection.player_class_details.name }}
+                    <span class="ml-2 fa fa-trash icon" (click)="deletePlayerClassConnection(connection)"></span>
+                </span>
+    
+                <span class="mx-3 fa fa-plus icon fa-1-5x" (click)="toggleConnectionCreateState()" *ngIf="!isCharacterConnectionCreationState; else connectionForm"></span>
+            </div>    
         </div>
 
         <!-- Form -->
@@ -55,8 +57,8 @@
 
 
 <ng-template #connectionForm>
-    <!-- Form for Creating Quote Connections -->
-    <form class="d-inline-flex align-items-center">
+    <!-- Form for Creating Player Class Connections -->
+    <form class="d-inline-flex align-items-center" (submit)="createPlayerClassConnection(connectionModel)">
         <select class="form-control d-inline-block" name="connection" id="connection" [(ngModel)]="connectionModel.player_class">
             <option 
             *ngFor="let playerClass of playerClasses" 
@@ -67,7 +69,7 @@
             </option>
         </select>
 
-        <i class="fa fa-times icon mx-2" (click)="toggleConnectionCreateState()"></i>
-        <i class="fa fa-check icon" (click)="createPlayerClassConnection(connectionModel)"></i>
+        <i class="fa fa-times icon mx-2 fa-1-5x" (click)="toggleConnectionCreateState()"></i>
+        <button> <i class="fa fa-check icon fa-1-5x"></i> </button>
     </form>
 </ng-template>
