Fixed various form issues

--- a/src/app/components/articles/character-article-update/character-article-update.component.html
+++ b/src/app/components/articles/character-article-update/character-article-update.component.html
@@ -70,6 +70,6 @@
         </select>
 
         <i class="fa fa-times icon mx-2 fa-1-5x" (click)="toggleConnectionCreateState()"></i>
-        <button> <i class="fa fa-check icon fa-1-5x"></i> </button>
+        <button type="submit"> <i class="fa fa-check icon fa-1-5x"></i> </button>
     </form>
 </ng-template>
