--- a/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
+++ b/src/app/components/articles/location-article-map-create/location-article-map-create.component.html
@@ -8,7 +8,7 @@
         <h2 class="text-center"> Adding Location and Marker </h2>
 
         <!-- Form -->
-        <form [formGroup]="locationForm">
+        <form [formGroup]="locationForm" (submit)="onSubmit()">
             <!-- Location Form -->
             <div class="mb-5">
                 <h5 class="mb-0"> Location Fields </h5>
@@ -23,7 +23,7 @@
             
             <!-- Form Buttons -->
             <div class="btn btn-dark mr-3" (click)="onCancel()">Cancel</div>
-            <div class="btn btn-secondary" (click)="onSubmit()">Submit</div>
+            <button type="submit" class="btn btn-secondary">Submit</button>
         </form>
 
     </article>
