--- a/src/app/components/utility/session-update-modal/session-update-modal.component.html
+++ b/src/app/components/utility/session-update-modal/session-update-modal.component.html
@@ -11,10 +11,10 @@
     <div class="modal-body">
         <div class="mb-1" *ngIf="model; else loading">        
             <!-- Form -->
-            <form [formGroup]="form">
+            <form [formGroup]="form" (submit)="onSubmit(modal)">
                 <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
                 <div class="btn btn-secondary mr-3" (click)="modal.close()">Cancel</div>
-                <div class="btn btn-secondary" (click)="onSubmit(modal)">Submit</div>
+                <button type="submit" class="btn btn-secondary">Submit</button>
             </form>
         </div>
         <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
