sized up icon on spell page

--- a/src/app/components/utility/spell/spell.component.html
+++ b/src/app/components/utility/spell/spell.component.html
@@ -19,7 +19,7 @@
 
                 <span *ngIf="tokenService.isAdmin()">
                     <span 
-                    class="icon fa fa-plus" 
+                    class="icon fa fa-plus fa-1-5x" 
                     (click)="toggleConnectionCreateState()" 
                     *ngIf="!isSpellConnectionCreateState; else connectionForm"
                     ></span>
