Fixed double submission problem
Forms were submitting doubly, because the eventemitter used was using a name of an event that is pre-used by angular. Renamed it thus to formlySubmit and formlyCancel

--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -37,8 +37,8 @@
                 <app-formly-formcontainer 
                 [model]="userModel" 
                 [fields]="userFields" 
-                (submit)="saveNewUser()" 
-                (cancel)="toggleUserCreateState()"
+                (formlySubmit)="saveNewUser()" 
+                (formlyCancel)="toggleUserCreateState()"
                 ></app-formly-formcontainer>
             </div>
     
