--- a/src/app/components/articles/location-article-update/location-article-update.component.html
+++ b/src/app/components/articles/location-article-update/location-article-update.component.html
@@ -25,8 +25,8 @@
         <app-formly-formcontainer 
         [model]="model" 
         [fields]="fields" 
-        (submit)="onSubmit()" 
-        (cancel)="onCancel()"
+        (formlySubmit)="onSubmit()" 
+        (formlyCancel)="onCancel()"
         ></app-formly-formcontainer>
 
     </article>
