--- a/src/app/components/articles/marker-map-create/marker-map-create.component.html
+++ b/src/app/components/articles/marker-map-create/marker-map-create.component.html
@@ -11,8 +11,8 @@
         <app-formly-formcontainer 
         [model]="model" 
         [fields]="fields" 
-        (submit)="onSubmit()" 
-        (cancel)="onCancel()"
+        (formlySubmit)="onSubmit()" 
+        (formlyCancel)="onCancel()"
         ></app-formly-formcontainer>
 
     </article>
