--- a/src/app/components/articles/session-audio-update/session-audio-update.component.html
+++ b/src/app/components/articles/session-audio-update/session-audio-update.component.html
@@ -17,8 +17,8 @@
             <app-formly-formcontainer 
             [model]="model" 
             [fields]="fields" 
-            (submit)="onSubmit()" 
-            (cancel)="onCancel()"
+            (formlySubmit)="onSubmit()" 
+            (formlyCancel)="onCancel()"
             ></app-formly-formcontainer>
         </div>
 
